--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  max-width: 20rem;
+  display: flex;
+  flex-direction:column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-51%, -51%);
+  align-items: center;
+}
+.container__buttons {
+  display:flex;
+  justify-content: space-between;
+  column-gap:1rem;
+}
+.counter {
+  font-size:2rem;
+  margin:0;
+  color:red;
+  margin-bottom: 0.5rem;
+}
